# xpack-study-projects

./: .gitignore  README.md
blinky-no-rtos/: .cproject  .project  CMakeLists.txt  README.md  blinky-no-rtos-stm32f0discovery-qemu-debug.launch  blinky-no-rtos-stm32f0discovery-qemu.launch  blinky-no-rtos-stm32f4discovery-qemu-debug.launch  blinky-no-rtos-stm32f4discovery-qemu.launch  package.json  stm32f4disco-debug-qemu.launch  toolchain.cmake
blinky-no-rtos/board-stm32f0discovery/include/micro-os-plus/: board.h
blinky-no-rtos/board-stm32f0discovery/include/micro-os-plus/board-stm32f0discovery/: defines.h
blinky-no-rtos/board-stm32f0discovery/linker-scripts/: mem.ld
blinky-no-rtos/board-stm32f0discovery/stm32cubemx/: stm32cubemx.gpdsc
blinky-no-rtos/board-stm32f0discovery/stm32cubemx/Core/Inc/: stm32f0xx_hal_conf.h
blinky-no-rtos/board-stm32f0discovery/stm32cubemx/Core/Src/: gpio.c
blinky-no-rtos/board-stm32f4disco/include/micro-os-plus/: board.h  device.h
blinky-no-rtos/board-stm32f4disco/include/micro-os-plus/board-stm32f4disco/: defines.h
blinky-no-rtos/board-stm32f4disco/linker-scripts/: mem.ld
blinky-no-rtos/board-stm32f4disco/src/: initialize-hardware.cpp  led.cpp
blinky-no-rtos/board-stm32f4disco/stm32cubemx/: README.md  stm32cubemx.gpdsc
blinky-no-rtos/board-stm32f4disco/stm32cubemx/Core/Src/: main.c  stm32f4xx_it.c
blinky-no-rtos/board-stm32f4discovery/include/micro-os-plus/: board.h
blinky-no-rtos/board-stm32f4discovery/include/micro-os-plus/board-stm32f4discovery/: defines.h
blinky-no-rtos/board-stm32f4discovery/src/: initialize-hardware.cpp
blinky-no-rtos/board-stm32f4discovery/stm32cubemx/: stm32cubemx.gpdsc
blinky-no-rtos/board-stm32f4discovery/stm32cubemx/Core/Inc/: stm32f4xx_it.h
blinky-no-rtos/board-stm32f4discovery/stm32cubemx/Core/Src/: gpio.c
blinky-no-rtos/include/: led.h  sysclock.h
blinky-no-rtos/meta/: CMakeLists.txt  meson.build
blinky-no-rtos/platform-sifive-hifive1/include/: led.h
blinky-no-rtos/platform-sifive-hifive1/include/micro-os-plus/: platform.h
blinky-no-rtos/platform-sifive-hifive1/include/micro-os-plus/platform-sifive-hifive1/: defines.h  functions-inlines.h  functions.h
blinky-no-rtos/platform-sifive-hifive1/meta/: config.cmake  globals.cmake  xpack-helper.cmake
blinky-no-rtos/platform-sifive-hifive1/src/: initialize-hardware.cpp  interrupts-handlers.cpp  led.cpp
blinky-no-rtos/platform-stm32f0discovery/: README.md
blinky-no-rtos/platform-stm32f0discovery/include/: led.h
blinky-no-rtos/platform-stm32f0discovery/include/micro-os-plus/: config.h  platform.h
blinky-no-rtos/platform-stm32f0discovery/include/micro-os-plus/platform-stm32f0discovery/: defines.h
blinky-no-rtos/platform-stm32f0discovery/linker-scripts/: mem.ld
blinky-no-rtos/platform-stm32f0discovery/meta/: config.cmake  globals.cmake  xpack-helper.cmake
blinky-no-rtos/platform-stm32f0discovery/src/: initialize-hardware.cpp  interrupts-handlers.cpp  led.cpp
blinky-no-rtos/platform-stm32f0discovery/stm32cubemx/: .mxproject  stm32cubemx.gpdsc  stm32cubemx.ioc
blinky-no-rtos/platform-stm32f0discovery/stm32cubemx/Core/Inc/: stm32f0xx_it.h
blinky-no-rtos/platform-stm32f4discovery/include/: led.h
blinky-no-rtos/platform-stm32f4discovery/include/micro-os-plus/: platform.h
blinky-no-rtos/platform-stm32f4discovery/meta/: config.cmake  globals.cmake  xpack-helper.cmake
blinky-no-rtos/platform-stm32f4discovery/src/: initialize-hardware.cpp  interrupts-handlers.cpp  led.cpp
blinky-no-rtos/platform-stm32f4discovery/stm32cubemx/: .mxproject  README.md  stm32cubemx.gpdsc  stm32cubemx.ioc
blinky-no-rtos/platform-synthetic-posix/include/: led.h
blinky-no-rtos/platform-synthetic-posix/meta/: config.cmake  globals.cmake  xpack-helper.cmake
blinky-no-rtos/platform-synthetic-posix/src/: led.cpp
blinky-no-rtos/scripts/: xpm-install-git.sh
blinky-no-rtos/src/: _write.c  main.cpp  sysclock.cpp
blinky-no-rtos/sysclock/: README.md
blinky-no-rtos/sysclock/include/: sysclock.h
blinky-no-rtos/sysclock/meta/: CMakeLists.txt
blinky-no-rtos/sysclock/src/: sysclock.cpp
blinky-rtos/: .cproject  .gitignore  .npmignore  .project  CMakeLists.txt  README.md  blinky-rtos-posix-debug.launch  blinky-rtos-stm32f0discovery-jlink-debug.launch  blinky-rtos-stm32f0discovery-qemu-debug.launch  blinky-rtos-stm32f4discovery-qemu.launch  package.json  toolchain-arm-none-eabi-gcc.cmake
blinky-rtos/include/micro-os-plus/: config.h
blinky-rtos/meta/: CMakeLists.txt  meson.build  xpbuild.json
blinky-rtos/platform-sifive-hifive1/include/: led.h
blinky-rtos/platform-sifive-hifive1/include/micro-os-plus/: config.h  platform.h
blinky-rtos/platform-sifive-hifive1/meta/: config.cmake  globals.cmake  xpack-helper.cmake
blinky-rtos/platform-sifive-hifive1/src/: initialize-hardware.cpp  interrupts-handlers.cpp  led.cpp
blinky-rtos/platform-stm32f0discovery/: README.md
blinky-rtos/platform-stm32f0discovery/include/micro-os-plus/: config.h  platform.h
blinky-rtos/platform-stm32f0discovery/meta/: config.cmake  globals.cmake  xpack-helper.cmake  xpack-target.cmake
blinky-rtos/platform-stm32f0discovery/src/: initialize-hardware.cpp  interrupts-handlers.cpp  led.cpp
blinky-rtos/platform-stm32f0discovery/stm32cubemx/: .mxproject  stm32cubemx.gpdsc  stm32cubemx.ioc
blinky-rtos/platform-stm32f4discovery/include/micro-os-plus/: config.h
blinky-rtos/platform-stm32f4discovery/linker-scripts/: mem.ld
blinky-rtos/platform-stm32f4discovery/meta/: config.cmake  globals.cmake  xpack-helper.cmake  xpack-target.cmake
blinky-rtos/platform-stm32f4discovery/src/: initialize-hardware.cpp  interrupts-handlers.cpp  led.cpp
blinky-rtos/platform-stm32f4discovery/stm32cubemx/: README.md  stm32cubemx.gpdsc  stm32cubemx.ioc
blinky-rtos/platform-synthetic-posix/include/micro-os-plus/: config.h  platform.h
blinky-rtos/platform-synthetic-posix/meta/: config.cmake  globals.cmake  xpack-helper.cmake
blinky-rtos/platform-synthetic-posix/src/: led.cpp
blinky-rtos/scripts/: xpm-install-git.sh
blinky-rtos/src/: _write.c  main.cpp
(+18 files in other folders)
